--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="techviral-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,11 +10,8 @@
       content="This is a techviral clone build in reactjs and tailwind css. For data, I use newsapi to render title, description, iamges and link of original news."
     />
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>Techviral - Clone  || All Pages</title>
+    <title>Techviral - Clone </title>
   </head>
   <body style="background-color: #f3f3f3; width: 100%;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
