--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This is a techviral clone build in reactjs and tailwind css. For data, I use newsapi to render title, description, iamges and link of original news."
-    />
+      content="This is a techviral clone build in reactjs and tailwind css. For data, I use newsapi to render title, description, iamges and link of original news." />
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-   
-    <title>Techviral - Clone </title>
+
+    <title>Techviral - Clone</title>
   </head>
-  <body style="background-color: #f3f3f3; width: 100%;">
+  <body class="min-w-[330px] overflow-auto bg-[#f3f3f3] border-red-500">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
   </body>
 </html>
